# nordnet-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pythonapp.yml
nordnet/: __main__.py  main.py
