[tool.poetry]
name = "nordnet-python"
version = "0.1.0"
description = ""
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
license = "MIT"
packages = [
    { include = "nordnet" },
]


[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"
click = "^7.1.1"
pycryptodome = "^3.9.7"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.1"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
