[tool.poetry]
name = "nordnet-python"
version = "0.1.0"
description = ""
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
license = "MIT"
packages = [
    { include = "nordnet" },
]


[tool.poetry.dependencies]
python = "^3.7"
requests = "*"
click = "*"
pycryptodome = "*"

[tool.poetry.dev-dependencies]
black = "*"
pytest = "*"
mypy = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
